# recipe-server

./: .gitignore  Makefile  Rocket.toml  flake.lock.license  flake.nix
elm/: elm.json.license
elm/src/: Main.elm  Style.elm
rs/: Cargo.toml
rs/.sqlx/: query-4a168eb28085d30002b663047152eab900771dcbf3e9df1e829d539746262d11.json  query-5f8ef0100ca935bea3bd55f63474d1fce0c312fa1c7e17d725f329c61c6cd60a.json  query-63bea2edec0ade511d3351ec6f9c870b8c9896b2d314f4bb0a2504ceb3a2a4bb.json  query-809172fa97c7f9295b067287af84269c685221d0741279b0887c520d5f925be9.json  query-8dfe02bcd0156cca143f0609953fe828dc8f110fdc8a3bab90c3d0f03b55dacb.json  query-c176d6ca87636733dbaeaf442af5dadc3a34e8f1590e67ca4d35f896d61dad53.json
rs/migrations/: 20250816041054_tables.sql  20250817104018_examples.sql  20250827083957_image_support.sql
rs/src/: db.rs  index.footer.html  index.header.html  index.html  main.rs
wasm/: Cargo.toml  index.html
wasm/src/: lib.rs
