# SPDX-FileCopyrightText: 2025 Madeline Baggins <madeline@baggins.family>
#
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "recipe-server"
version = "0.2.0"
edition = "2024"

[dependencies]
maddi-recipe = "0.1.4"
serde = { version = "1.0.219", features = ["derive"] }

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]

[dependencies.sqlx]
version = "0.7.4"
features = ["macros"]
