# SPDX-FileCopyrightText: 2025 Madeline Baggins <madeline@baggins.family>
#
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
maddi-recipe = "0.1.0"
markdown = "1.0.0"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Window"] }
